# agent.cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml  lint.yml  update-llama-cpp.yml
examples/: README.md
examples/context-engineering/: CMakeLists.txt  README.md  context-engineering.cpp
examples/mcp/: CMakeLists.txt  README.md  mcp.cpp  server.py
examples/memory/: CMakeLists.txt  README.md  memory.cpp
examples/multi-agent/: CMakeLists.txt  README.md  multi-agent.cpp
examples/shared/: calculator_tool.h  error_recovery_callback.h  logging_callback.h
examples/shell/: CMakeLists.txt  README.md  shell.cpp
examples/tracing/: CMakeLists.txt  tracing.cpp
src/: agent.cpp  agent.h  error.h  model.cpp  model.h
src/mcp/: mcp_client.cpp  mcp_client.h  mcp_tool.cpp  mcp_tool.h
src/oauth/: oauth.cpp  oauth.h  oauth_error.h  token_storage.cpp  token_storage.h
tests/: test_mcp_client.cpp  test_model.cpp
